--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,18 @@
-[*]
-insert_final_newline = true
+# EditorConfig is awesome: https://editorconfig.org
 
-[*.tsp]
-indent_size = 2
+# top-most EditorConfig file
+root = true
+
+# Unix-style newlines with a newline ending every file
+[*]
+end_of_line = lf
+insert_final_newline = true
 indent_style = space
+indent_size = 2
+charset = utf-8
+
+[*.json]
+insert_final_newline = false
+
+[Makefile]
+indent_style = tab
