add vscode extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,5 +2,7 @@
 	"recommendations": [
 		"typespec.typespec-vscode",
     "42Crunch.vscode-openapi",
+    "streetsidesoftware.code-spell-checker",
+    "usernamehw.errorlens",
 	],
 }
