--- a/tspconfig.yaml
+++ b/tspconfig.yaml
@@ -1,7 +1,10 @@
+parameters:
+  "service-dir":
+    default: "schema"
 emit:
   - "@typespec/openapi3"
 options:
   "@typespec/openapi3":
-    emitter-output-dir: "{output-dir}/schema"
+    emitter-output-dir: "{output-dir}/{service-dir}"
     openapi-versions:
       - 3.1.0
