install code emitters

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,6 @@ jobs:
       - name: Upload output file as artifact
         uses: actions/upload-artifact@v6
         with:
-          name: schema
+          name: artifacts
           path: ./tsp-output
           retention-days: 1
