--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,17 +14,7 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9.15.2
-      - uses: actions/setup-node@v6
-        with:
-          node-version: '24.10.0'
-          cache: 'pnpm'
-      - name: Run CI tests
-        shell: bash
-        run: |
-          make ci-test
+      - uses: ./.github/actions/setup-and-build
       - name: Upload output file as artifact
         uses: actions/upload-artifact@v6
         with:
