--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,27 +14,19 @@ jobs:
     strategy:
       matrix:
         platform:
-          - 'ubuntu-latest'
-          # - 'macos-latest'
-          # - 'windows-latest'
+          - "ubuntu-latest"
+          # - "macos-latest"
+          # - "windows-latest"
         node-version:
-          - '24.10.0'
+          - "24.10.0"
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0 # to retrieve git tags
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9.15.2
-      - uses: actions/setup-node@v6
+      - uses: ./.github/actions/setup-and-build
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
-      - name: Run CI tests
-        shell: bash
-        run: |
-          make ci-test
       - name: Upload output file as artifact
         uses: actions/upload-artifact@v6
         with:
