--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,9 +20,11 @@ jobs:
         with:
           name: artifacts-${{ github.ref_name }}
           path: ./tsp-output
+      - name: Create zip archive
+        run: zip -r tsp-output.zip tsp-output
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
           files: |
-            ./tsp-output/schemas/openapi.yaml
+            ./tsp-output.zip
